--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
 <!-- Wowowoyipiyouuu tu código acá -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Trans-Lab</title>
+	<script src="https://use.fontawesome.com/cbf59482a4.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	<!-- FIRST SECTION -->
+	<section class="first-section">
+		<div class="container">
+			<div class="row">
+				<div class="col s12 first-logo">
+					<img src="docs/imagen.png" alt="logo" class="center-block">
+					<h1>TRANS-LAB</h1>
+				</div>
+				<div class="col s12 first-inputs">
+					<input type="text" placeholder="Correo Electrónico" class="input-correo">
+					<input type="text" placeholder="Contraseña" class="input-contrasenia">
+					<button>INICIAR SESIÓN</button>
+					<a href="#">¿Olvidaste tu contraseña?</a>
+				</div>
+				<div class="col s12 first-registrate">
+					<p>¿NO TIENES CUENTA? <a href="#">REGÍSTRATE</a></p>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<script src="https://code.jquery.com/jquery-3.2.1.js"
+	  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+	  crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+</body>
+</html>
