cambio de clases, id

--- a/index-cuarto.html
+++ b/index-cuarto.html
@@ -17,11 +17,11 @@
 			   	<a href="#" class="brand-logo center">TRANS-LAB</a>
 			   	<ul id="slide-out" class="side-nav">
 			    	<li><a href="#!"></a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">attach_money</i>Ver saldo</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">view_module</i>Calcular Tarifa</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">perm_identity</i>Perfil</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">assignment</i>Preguntas frecuentes</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">home</i>Home</a></li>
+			     	<li><a href="index-quinto.html" class=""><i class="material-icons">attach_money</i>Ver saldo</a></li>
+			     	<li><a href="index-sexto.html" class=""><i class="material-icons">view_module</i>Calcular Tarifa</a></li>
+			     	<li><a href="index-tercero.html" class=""><i class="material-icons">perm_identity</i>Perfil</a></li>
+			     	<li><a href="index-cuarto.html" class=""><i class="material-icons">assignment</i>Preguntas frecuentes</a></li>
+			     	<li><a href="index-segundo.html" class=""><i class="material-icons">home</i>Home</a></li>
 		   		</ul>
 		   		<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 		 	</div>
