--- a/index-segundo.html
+++ b/index-segundo.html
@@ -17,11 +17,11 @@
 			   	<a href="#" class="brand-logo center">TRANS-LAB</a>
 			   	<ul id="slide-out" class="side-nav">
 			    	<li><a href="#!"></a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">attach_money</i>Ver saldo</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">view_module</i>Calcular Tarifa</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">perm_identity</i>Perfil</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">assignment</i>Preguntas frecuentes</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">home</i>Home</a></li>
+			     	<li><a href="index-quinto.html" class=""><i class="material-icons">attach_money</i>Ver saldo</a></li>
+			     	<li><a href="index-sexto.html" class=""><i class="material-icons">view_module</i>Calcular Tarifa</a></li>
+			     	<li><a href="index-tercero.html" class=""><i class="material-icons">perm_identity</i>Perfil</a></li>
+			     	<li><a href="index-cuarto.html" class=""><i class="material-icons">assignment</i>Preguntas frecuentes</a></li>
+			     	<li><a href="index-segundo.html" class=""><i class="material-icons">home</i>Home</a></li>
 		   		</ul>
 		   		<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 		 	</div>
@@ -32,10 +32,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s12 second-button">
-					<button class="col s12 btn-uno">VER SALDO</button>
-					<button class="col s12 btn-dos">CALCULAR TARIFA</button>
-					<button class="col s12 btn-tres">PERFIL</button>
-					<button class="col s12 btn-cuatro">PREGUNTAS FRECUENTES</button>
+					<a class="col s12 btn-uno" href="index-quinto.html">VER SALDO</a>
+					<a class="col s12 btn-dos" href="index-sexto.html">CALCULAR TARIFA</a>
+					<a class="col s12 btn-tres" href="index-tercero.html">PERFIL</a>
+					<a class="col s12 btn-cuatro" href="index-cuarto.html">PREGUNTAS FRECUENTES</a>
 				</div>
 			</div>
 		</div>
