--- a/index-quinto.html
+++ b/index-quinto.html
@@ -17,11 +17,11 @@
 			   	<a href="#" class="brand-logo center">TRANS-LAB</a>
 			   	<ul id="slide-out" class="side-nav">
 			    	<li><a href="#!"></a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">attach_money</i>Ver saldo</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">view_module</i>Calcular Tarifa</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">perm_identity</i>Perfil</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">assignment</i>Preguntas frecuentes</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">home</i>Home</a></li>
+			     	<li><a href="index-quinto.html" class=""><i class="material-icons">attach_money</i>Ver saldo</a></li>
+			     	<li><a href="index-sexto.html" class=""><i class="material-icons">view_module</i>Calcular Tarifa</a></li>
+			     	<li><a href="index-tercero.html" class=""><i class="material-icons">perm_identity</i>Perfil</a></li>
+			     	<li><a href="index-cuarto.html" class=""><i class="material-icons">assignment</i>Preguntas frecuentes</a></li>
+			     	<li><a href="index-segundo.html" class=""><i class="material-icons">home</i>Home</a></li>
 		   		</ul>
 		   		<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 		 	</div>
@@ -31,9 +31,6 @@
 	<section class="second-section-cinco">
 		<div class="container">
 			<div class="row">
-				<div class="col s12 balances">
-					<input type="text" placeholder="Número tarjeta" class="input-numero-tarjeta">
-				</div>
 				<div class="col-s12">
     				<select>
 					    <option value="" disabled selected>Choose your option</option>
@@ -42,9 +39,14 @@
 					   	<option value="3">Option 3</option>
     				</select>
  				</div>
+ 				<div class="col s12 balances">
+					<input type="text" placeholder="Número tarjeta" class="input-numero-tarjeta input-num">
 				</div>
 				<div class="col s12 button-balances">
-					<button>VER SALDO</button>
+					<button id="imprimir-numero">VER SALDO</button>
+				</div>
+				<div class="col s12 print-balances third-inputs">
+					
 				</div>
 			</div>
 		</div>
