--- a/index-tercero.html
+++ b/index-tercero.html
@@ -10,17 +10,18 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body class="index-dos">
+	<!-- FIRST SECTION -->
 	<section class="first-section-dos">	
 		<nav>
 		 	<div class="nav-wrapper">
 			   	<a href="#" class="brand-logo center">TRANS-LAB</a>
 			   	<ul id="slide-out" class="side-nav">
 			    	<li><a href="#!"></a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">attach_money</i>Ver saldo</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">view_module</i>Calcular Tarifa</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">perm_identity</i>Perfil</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">assignment</i>Preguntas frecuentes</a></li>
-			     	<li><a href="#!" class=""><i class="material-icons">home</i>Home</a></li>
+			     	<li><a href="index-quinto.html" class=""><i class="material-icons">attach_money</i>Ver saldo</a></li>
+			     	<li><a href="index-sexto.html" class=""><i class="material-icons">view_module</i>Calcular Tarifa</a></li>
+			     	<li><a href="index-tercero.html" class=""><i class="material-icons">perm_identity</i>Perfil</a></li>
+			     	<li><a href="index-cuarto.html" class=""><i class="material-icons">assignment</i>Preguntas frecuentes</a></li>
+			     	<li><a href="index-segundo.html" class=""><i class="material-icons">home</i>Home</a></li>
 		   		</ul>
 		   		<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 		 	</div>
@@ -41,11 +42,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s12 third-inputs">
-					<p>default@example.com</p>
+					<p id="input-correo">default@example.com</p>
 					<input type="text" placeholder="Número tarjeta" class="input-numero-tarjeta">
-					<button>AGREGAR TARJETA</button>
+					<button class="btn-agregar">AGREGAR TARJETA</button>
 				</div>
-				<div class="col s12">
+				<div class="col s12 third-inputs print">
 					<!-- numeros de tarjeta -->
 				</div>
 			</div>
