--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 					<h1>TRANS-LAB</h1>
 				</div>
 				<div class="col s12 first-inputs">
-					<input type="text" placeholder="Correo Electrónico" class="input-correo">
-					<input type="text" placeholder="Contraseña" class="input-contrasenia">
-					<button>INICIAR SESIÓN</button>
+					<input type="text" placeholder="Correo Electrónico" class="input-correo" id="input-correo">
+					<div class="input-box"></div>
+					<input type="text" placeholder="Contraseña" class="input-contrasenia" id="input-contrasenia">
+					<div class="input-box"></div>
+					<a class="btn-inicio">INICIAR SESIÓN</a>
 					<a href="#">¿Olvidaste tu contraseña?</a>
 				</div>
 				<div class="col s12 first-registrate">
