--- a/index-quinto.html
+++ b/index-quinto.html
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="col-s12">
     				<select>
-					    <option value="" disabled selected>Choose your option</option>
+					    <option value="" disabled selected>Elige tarjeta</option>
 					  	<option value="1">Option 1</option>
 					   	<option value="2">Option 2</option>
 					   	<option value="3">Option 3</option>
