--- a/index-sexto.html
+++ b/index-sexto.html
@@ -37,8 +37,8 @@
 				<div class="col-s12">
 					<label for="tarjeta">Tarjeta</label>
 	    				<select>
-						    <option value="" disabled selected>Choose your option</option>
-						  	<option value="1">Option 1</option>
+						    <option value="" disabled selected>Elige tarjeta</option>
+						  	<option value="21106421">Option 1</option>
 						   	<option value="2">Option 2</option>
 						   	<option value="3">Option 3</option>
 	    				</select>
@@ -46,14 +46,17 @@
  				<div class="col-s12">
  					<label for="tarifa">Tarifa</label>
 	    				<select>
-						    <option value="" disabled selected>Choose your option</option>
-						  	<option value="1" id="uno">Option 1</option>
-						   	<option value="2" id="dos">Option 2</option>
-						   	<option value="3" id="tres">Option 3</option>
+						    <option value="" disabled selected>Elige tarifa</option>
+						  	<option value="1" id="uno">$760</option>
+						   	<option value="2" id="dos">$680</option>
+						   	<option value="3" id="tres">$640</option>
 	    				</select>
  				</div>
  				<div class="col s12 button-balances">
 					<button id="calcular">CALCULAR</button>
+				</div>
+				<div class="col s12 calculado">
+					
 				</div>
  			</div>
  		</div>
