--- a/index-tercero.html
+++ b/index-tercero.html
@@ -43,7 +43,7 @@
 			<div class="row">
 				<div class="col s12 third-inputs">
 					<p id="input-correo">default@example.com</p>
-					<input type="text" placeholder="Número tarjeta" class="input-numero-tarjeta">
+					<input type="text" placeholder="Número tarjeta" id="input-numero-tarjeta" class="input-numero-tarjeta">
 					<button class="btn-agregar">AGREGAR TARJETA</button>
 				</div>
 				<div class="col s12 third-inputs print">
