detaller de password

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="col s12 first-inputs">
 					<input type="text" placeholder="Correo Electrónico" class="input-correo" id="input-correo">
 					<div class="input-box"></div>
-					<input type="text" placeholder="Contraseña" class="input-contrasenia" id="input-contrasenia">
+					<input type="password" placeholder="Contraseña" class="input-contrasenia" id="input-contrasenia">
 					<div class="input-box"></div>
 					<a class="btn-inicio">INICIAR SESIÓN</a>
 					<a href="#">¿Olvidaste tu contraseña?</a>
@@ -34,7 +34,7 @@
 		</div>
 	</section>
 	
-	
+
 	<script src="https://code.jquery.com/jquery-3.2.1.js"
 	  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 	  crossorigin="anonymous"></script>
